nginx/ingress-resources/failed-ingress-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: abc.xyz.com
    http:
      paths:
      - path: /nginx-first
        backend:
          serviceName: nginx-first
          servicePort: 80
      - path: /nginx-second
        backend:
          serviceName: nginx-second
          servicePort: 80
      - backend:
          serviceName: nginx-default
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: ingress.<Cluster IP>.nip.io
	http:
      paths:
      - path: /nginx-first
        backend:
          serviceName: nginx-first
          servicePort: 80
      - path: /nginx-second
        backend:
          serviceName: nginx-second
          servicePort: 80
      - backend:
          serviceName: nginx-default
          servicePort: 80
