nginx/ingress-resources/multipe-ingress-rule-with-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: <hostname>
    http:
      paths:
      - path: /nginx-first(/|$)(.*)
        backend:
          serviceName: nginx-first
          servicePort: 80
      - path: /nginx-second(/|$)(.*)
        backend:
          serviceName: nginx-second
          servicePort: 80
      - path: /nginx-default(/|$)(.*)
        backend:
          serviceName: nginx-default
          servicePort: 80
